# BlockRace

./: .gitignore  CMakeLists.txt  README.md  polygonEditor.html
assets/maps/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
src/: BlockManager.cpp  BlockManager.hpp  Car.cpp  Car.hpp  Cheats.cpp  Cheats.hpp  Entity.cpp  Entity.hpp  EventBus.hpp  Events.hpp  FileDialog.cpp  FileDialog.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  StartButton.cpp  StartButton.hpp  main.cpp
src/Blocks/: AccelerationBlock.cpp  AccelerationBlock.hpp  Block.cpp  Block.hpp  ConstSpeedBlock.cpp  ConstSpeedBlock.hpp  DecelerationBlock.cpp  DecelerationBlock.hpp  MoveToBlock.cpp  MoveToBlock.hpp  RotationBlock.cpp  RotationBlock.hpp  StartBlock.cpp  StartBlock.hpp  TimerBlock.cpp  TimerBlock.hpp
src/Particles/: BlackSmokeParticle.cpp  BlackSmokeParticle.hpp  BlackSmokeSystem.cpp  BlackSmokeSystem.hpp  FireworkParticle.cpp  FireworkParticle.hpp  FireworkSystem.cpp  FireworkSystem.hpp  SmokeParticle.cpp  SmokeParticle.hpp  SmokeSystem.cpp  SmokeSystem.hpp
src/UI/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp  NumberField.cpp  NumberField.hpp  PopupWindow.cpp  PopupWindow.hpp  PopuppWindow.cpp  StartButton.cpp  StartButton.hpp  TextField.cpp  TextField.hpp  UIElement.cpp  UIElement.hpp
